--- a/public/books/listBooks.html
+++ b/public/books/listBooks.html
@@ -82,6 +82,8 @@
       </div>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script> 
+        
         <script src="../js/books/listBooks.js"></script>
         <!-- Scripts cloudinary -->
         <script src="../js/images.js"></script>
