--- a/public/books/updateBook.html
+++ b/public/books/updateBook.html
@@ -135,7 +135,7 @@
             </div>
         </fieldset>
             <div>
-                <button type="button" id="btn_update">Editar</button>
+                <button type="button" id="btn_update">Actualizar</button>
             </div>
         </fieldset>
 
