--- a/public/clubs/listClubs.html
+++ b/public/clubs/listClubs.html
@@ -70,6 +70,7 @@
                     <td>Día</td>
                     <td>Sucursal</td>
                     <td></td>
+                    <td></td>
                 </tr>
             </thead>
             <tbody>
@@ -78,6 +79,7 @@
       </fieldset>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script> 
         <script src="../js/clubs/listClubs.js"></script>
 
         <script type="text/javascript" src="../js/layout.js"></script>
