--- a/public/users/signin.html
+++ b/public/users/signin.html
@@ -33,6 +33,7 @@
       </div>
 
       <p class="center"><button type="submit" class="button-primary" id="btnLogin">Iniciar Sesión</button></p><br>
+      <p class="center"><a href="./emailconfirm.html">¿Olvidaste tu contraseña?</a></p>
       <p class="center"><a href="./register.html">¿No eres usuario aún? Regístrate acá</a></p>
     </form>
   </div>
