Cambios en imagenes en librerias

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       </span>
       <div id="profile-menu" style="display: none">
         <ul>
-          <li><a href="./profile.html">Perfil</a></li>
+          <li><a href="./users/profile.html">Perfil</a></li>
           <li><a href="./users/logout.html">Logout</a></li>
         </ul>
       </div>
