--- a/public/books/createBook.html
+++ b/public/books/createBook.html
@@ -139,7 +139,8 @@
             </div>
       </fieldset>
             <div>
-                <button type="button" id="btn_register">Registrar</button>
+                <button type="button" id="btn_register" class="button-primary">Registrar</button>
+                <button type="button" id="btnCancel" class="button-secondary">Cancelar</button>
             </div>
 
         </form>
