--- a/public/clubs/createClub.html
+++ b/public/clubs/createClub.html
@@ -144,7 +144,9 @@
             </div>
           </fieldset>
             <div>
-                <button type="button" id="btn_create">Crear Club</button>
+                <button type="button" id="btn_create" class="button-primary">Crear Club</button>
+                <button type="button" id="btnCancel" class="button-secondary">Cancelar</button>
+
             </div>
 
         </form>
