--- a/public/clubs/updateClub.html
+++ b/public/clubs/updateClub.html
@@ -138,7 +138,8 @@
             </div>
             <div>
           </fieldset>
-                <button type="button" id="btn_update">Actualizar</button>
+                <button type="button" id="btn_update" class="button-primary">Actualizar</button>
+                <button type="button" id="btnCancel" class="button-secondary">Cancelar</button>
             </div>
 
         </form>
