--- a/public/books/updateBook.html
+++ b/public/books/updateBook.html
@@ -135,7 +135,8 @@
             </div>
         </fieldset>
             <div>
-                <button type="button" id="btn_update">Actualizar</button>
+                <button type="button" id="btn_update" class="button-primary">Actualizar</button>
+                <button type="button" id="btnCancel" class="button-secondary">Cancelar</button>
             </div>
         </fieldset>
 
