--- a/public/books/createBook.html
+++ b/public/books/createBook.html
@@ -17,7 +17,7 @@
     <div class="topmenu-item"><a href="../aboutapp.html">Nuestro Producto</a></div>
     <div class="topmenu-item user-profile">
       <span class="helper">
-          <a id="user-profile-trigger"><span>John Malkovich</span> &nbsp; <img src="./img/user-portrait.jpeg" alt="Usuario" height="30" width="30"></a>
+          <a id="user-profile-trigger"><span>John Malkovich</span> &nbsp; <img src="../img/user-portrait.jpeg" alt="Usuario" height="30" width="30"></a>
       </span>
       <div id="profile-menu" style="display: none">
         <ul>
@@ -147,7 +147,9 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script> 
-        
+        <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+    
         <script src="../js/books/createBooks.js"></script>
         <!-- Scripts cloudinary -->
         <script src="../js/images.js"></script>
