--- a/public/books/updateBook.html
+++ b/public/books/updateBook.html
@@ -144,6 +144,8 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script> 
+        <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
         
         <script src="../js/books/updateBook.js"></script>
         <!-- Scripts cloudinary -->
