--- a/public/carrito/carritoList.html
+++ b/public/carrito/carritoList.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>TitanDev - Libros</title>
+  <title>TitanDev - Carrito</title>
   <link rel="stylesheet" type="text/css" href="../css/base.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 </head>
@@ -42,41 +42,30 @@
     </div>
 
     <div id="content">
-        <h1>Libros</h1>
-        <h2>Lista de libros registrados</h2>
+        <h1>Carritos</h1>
+        <h2>Lista de libros en el carrito</h2>
         <fieldset>
-        <div class="search">
-            <label for="search">Buscar libros:</label><br>
-            <input type="text" id="txtSearch" name="txtSearch">
-            <button id="btnSearch" class="button"><img src="../img/search.png" alt="Buscar"></button>
-        </div>
         <div>
-            <nav class="createLink">
-              <a href="createBook.html">Registrar Libro</a>
+            <nav class="listBooks">
+              <a href="listBooks.html">Ver Libros</a>
             </nav>
         </div>
       </fieldset>
       <fieldset>
-        <table id = "tbl_books">
+        <table id = "tbl_compra">
             <thead>
                 <tr>
                     <td>Nombre</td>
                     <td>Género</td>
                     <td>Autor</td>
-                    <td>Descripción</td>
-                    <td>Año</td>
                     <td>Editorial</td>
                     <td>Tipo</td>
-                    <td>Lenguage</td>
-                    <td>ISBN</td>
-                    <td>Precio</td>
                     <td>Cantidad</td>
-                    <td></td>
-                    <td></td>
+                    <td>Subtotal</td>
                 </tr>
             </thead>
             <tbody>
-            </tbody>  
+          </tbody>  
         </table>
       </fieldset>
       </div>
@@ -84,7 +73,7 @@
         <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script> 
         
-        <script src="../js/books/listBooks.js"></script>
+        <script src="../js/carrito/carritoList.js"></script>
         <!-- Scripts cloudinary -->
         <script src="../js/images.js"></script>
         <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
