--- a/public/libraries/add.html
+++ b/public/libraries/add.html
@@ -17,7 +17,7 @@
     <div class="topmenu-item"><a href="../aboutapp.html">Nuestro Producto</a></div>
     <div class="topmenu-item user-profile">
       <span class="helper">
-          <a id="user-profile-trigger"><span>John Malkovich</span> &nbsp; <img src="./img/user-portrait.jpeg" alt="Usuario" height="30" width="30"></a>
+          <a id="user-profile-trigger"><span>John Malkovich</span> &nbsp; <img src="../img/user-portrait.jpeg" alt="Usuario" height="30" width="30"></a>
       </span>
       <div id="profile-menu" style="display: none">
         <ul>
@@ -58,7 +58,7 @@
         <ul></ul>
       </div>
 
-      <form name="frmAddUser" id="frmAddUser" method="POST" class="form">
+      <form name="frmAddLibrary" id="frmAddLibrary" method="POST" class="form">
         <fieldset>
           <legend>Datos generales:</legend>
 
@@ -96,7 +96,8 @@
           <div class="row">
             <div class="col-6">
               <label for="location">Ubicación por Mapa</label>
-              <input type="text" name="location" id="location" class="required">
+              <input type="text" name="location" id="location" placeholher="Mueva el marcador para ingresar coordenadas">
+              <div id="mapa"></div>
             </div>
             <div class="col-6">
               <label for="image">Imagen</label><br>
@@ -191,6 +192,8 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js"></script>
   <script type="text/javascript" src="https://widget.cloudinary.com/global/all.js"></script>
   <script type="text/javascript" src="../js/images.js"></script>
+  <script type="text/javascript" src="../js/maps.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHcdVjtoxvl1rDEGuvwgZMP2f9xNBFaqQ&callback=mapaInicial"></script>
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
   
