Corregir layout en about page

--- a/public/libraries/register.html
+++ b/public/libraries/register.html
@@ -20,7 +20,7 @@
     <ul></ul>
   </div>
 
-  <form name="frmAddUser" id="frmAddUser" method="POST" class="form">
+  <form name="frmAddLibrary" id="frmAddLibrary" method="POST" class="form">
     <fieldset class="center">
       <legend>Datos generales:</legend>
 
@@ -159,7 +159,7 @@
   <script type="text/javascript" src="https://widget.cloudinary.com/global/all.js"></script>
   <script type="text/javascript" src="../js/images.js"></script>
   <script type="text/javascript" src="../js/maps.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9SMLr_wnOIc87B6PBLqLT5MdGWfLp27A&callback=mapaInicial"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHcdVjtoxvl1rDEGuvwgZMP2f9xNBFaqQ&callback=mapaInicial"></script>
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 
