--- a/public/libraries/index.html
+++ b/public/libraries/index.html
@@ -56,6 +56,7 @@
         <label for="search">Buscar en librerías:</label><br>
         <input type="text" id="txtSearch" name="txtSearch">
         <button id="btnSearch" class="button-search"><img src="../img/search.png" alt="Buscar"></button>
+        <a href="./add.html" style="float: right">Agregar Libreria</a>
       </div>
 
       <div id="libraries">
